--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 distlib==0.3.6
 Django==4.1.4
 filelock==3.8.2
+gunicorn==20.1.0
 platformdirs==2.5.4
 sqlparse==0.4.3
 tzdata==2022.7
